<resources>
    <string name="app_name">Seeker</string>
    <string name="terms_and_conditions"> <u>terms and conditions</u>.</string>
    <string name="Emp_title_msg">Messages</string>
    <string name="Emp_title_project">My Projects</string>
    <string name="Emp_title_post">Post</string>
    <string name="Emp_title_account">Account</string>
    <string name="Emp_title_search">Search</string>
    <string name="place_a_bid_on">Place a bid on</string>
    <string name="price">Price: </string>
    <string name="delivery_date">Delivery Date:</string>
    <string name="describe_your_bid">Describe your Bid:</string>
    <string name="post_a_bid">POST A BID</string>
</resources>